# phpantom_lsp

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  codecov.yml  config-schema.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml  release.yml
benches/: memory_usage.py
dev/bench/: data.js
dev/memory/: data.js
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI.md  SETUP.md  todo.md
docs/todo/: actions.md  blade.md  bugs.md  completion.md  indexing.md  laravel.md  lsp-features.md  performance.md  refactor.md  type-inference.md
examples/: demo.php
examples/laravel/: README.md  assertions.php  composer.json
src/: analyse.rs  backend.rs  call_args.rs  class_lookup.rs  class_lookup_tests.rs  classmap_scanner.rs  classmap_scanner_tests.rs  code_lens.rs  composer.rs  config.rs  document_links.rs  document_symbols.rs  fix.rs  folding.rs  formatting.rs  inheritance.rs  inheritance_tests.rs  inlay_hints.rs  lib.rs  linked_editing.rs  mago.rs  main.rs  phar.rs  php_type.rs  php_type_tests.rs  phpcs.rs  phpstan.rs  phpstan_ignore.rs  process.rs  progress.rs  reference_index.rs  resolution.rs  selection_range.rs  selection_range_tests.rs  self_update.rs  self_update_tests.rs  semantic_tokens.rs  server.rs  signature_help.rs  stub_patches.rs  (+14 more)
src/analyse/: mod.rs  output.rs  run.rs
src/backend/: file_access.rs
src/blade/: directives.rs  mod.rs  preprocessor.rs
src/classmap_scanner/: discovery.rs  discovery_tests.rs  lexer.rs  lexer_tests.rs  mod.rs
src/code_actions/: change_visibility.rs  convert_switch_to_match.rs  convert_to_arrow_function.rs  convert_to_closure.rs  convert_to_instance_variable.rs  extract_constant.rs  extract_constant_tests.rs  extract_function.rs  extract_function_tests.rs  extract_interface.rs  extract_variable.rs  extract_variable_tests.rs  fix_class_case.rs  fix_class_name.rs  fix_namespace.rs  generate_constructor.rs  generate_getter_setter.rs  generate_property_hooks.rs  implement_methods.rs  import_class.rs  import_class_tests.rs  inline_variable.rs  mod.rs  naming.rs  promote_constructor_param.rs  remove_unused_import.rs  replace_deprecated.rs  replace_fqcn.rs  simplify_null.rs  update_docblock.rs  update_docblock_tests.rs
src/completion/: array_callable.rs  array_shape.rs  builder.rs  call_resolution.rs  command_params.rs  command_params_tests.rs  eloquent_string.rs  handler.rs  laravel_route_controller.rs  laravel_string_keys.rs  mod.rs  named_args.rs  resolve.rs  resolver.rs  target.rs
src/definition/: implementation.rs  mod.rs  resolve.rs  type_definition.rs
src/diagnostics/: argument_count.rs  class_case_mismatch.rs  class_name_mismatch.rs  deprecated.rs  helpers.rs  ignore_rules.rs  implementation_errors.rs  invalid_class_kind.rs  (+12 more)
tests/: fixture_runner.rs
zed-extension/: Cargo.toml  extension.toml
(+372 files in other folders)
