[package]
name = "phpantom_lsp"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Fast PHP language server with deep type intelligence. Generics, Laravel, PHPStan annotations. Ready in an instant."
repository = "https://github.com/PHPantom-dev/phpantom_lsp"
documentation = "https://docs.rs/phpantom_lsp/latest/phpantom_lsp/"
readme = "README.md"
exclude = [".gitignore", ".github/*", "target/*"]

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.62"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
mago-syntax = "=1.43.0"
mago-allocator = "=1.43.0"
mago-database = "=1.43.0"
mago-docblock = "=1.42.0"
mago-names = "=1.43.0"
mago-span = "=1.43.0"
mago-type-syntax = "=1.42.0"
mago-formatter = { version = "=1.43.0", features = ["serde"] }
mago-php-version = "=1.43.0"
mago-composer = "=1.43.0"
ignore = "0.4"
globset = "0.4"
regex = "1"
memchr = "2"
memmap2 = "0.9"
ustr = "1"
parking_lot = "0.12"
tempfile = "3"
toml = "1"
etcetera = "0.11"
ureq = "3"
tar = "0.4"
flate2 = "1"
self-replace = "1"
zip = "2"

# musl's built-in malloc is very slow under the multi-threaded,
# allocation-heavy load of parallel indexing and parse workers (4-6x
# slower whole-project analysis), so the static musl binaries we ship
# for Linux use mimalloc instead. Scoped to musl only: glibc, macOS,
# and Windows system allocators perform fine, and mimalloc retains
# freed pages more aggressively than they do, so enabling it where it
# isn't needed just raises resident memory.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.47", optional = true }
libmimalloc-sys = { version = "0.1", optional = true, features = ["extended"] }
libc = { version = "0.2", optional = true }

[build-dependencies]
ureq = "3"
tar = "0.4"
flate2 = "1"

[features]
# mimalloc is the default allocator on every shipped platform (see the
# note on the target-specific dependency above). It is a feature so it
# can be toggled off for benchmarking or debugging without editing code.
default = ["mimalloc"]
mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys", "dep:libc"]

[dev-dependencies]
datatest-stable = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "fixture_runner"
harness = false

[[test]]
name = "assert_type_runner"
harness = false

[[bench]]
name = "completion"
harness = false

[[bench]]
name = "references"
harness = false

[[bench]]
name = "laravel_completion"
harness = false

[[bench]]
name = "custom_builder"
harness = false
